# MangaApp

./: .gitignore  Muhnga Design.drawio  genre_generator.py  manga_data_script.py  publisher_emails.csv  publisher_emails.xlsx  pubspec.yaml
.mason/: bricks.json
android/app/: build.gradle  google-services.json
assets/: manga_data.json
backend/scraping/: chapter_list.pickle  manga_data.pickle  pyproject.toml  scrape.py  test.py
bing chilling/: Cold Emails.numbers  Cold LinkedIn.numbers
ios/: Podfile
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: dummy-data.dart  main.dart  mkdirs.sh
lib/components/: firebase_image.dart  home_page_grid.dart  manga_summary.dart  search_list_item.dart  sliding_app_bar.dart
lib/helpers/: app_constants.dart  app_constants.json  appcolours.dart  firebase_storage.dart
lib/models/: chapter.dart  genres.dart  manga.dart  user.dart
lib/pages/: account_page.dart  account_page_no_user.dart  account_settings_page.dart  comment_page.dart  comments_page.dart  display_manga.dart  home_page.dart  login_page.dart  manga_page.dart  more_search_page.dart  profile_page.dart  search_extra.dart  search_page.dart  settings_page.dart  subscribe_page.dart
lib/providers/: profile_model.dart
lib/shared/: comment_box.dart  muhnga_app_bar.dart  muhnga_bottom_bar.dart  muhnga_colors.dart  muhnga_constants.dart  muhnga_icon_button.dart  muhnga_img.dart  muhnga_rating_bar.dart  sliding_app_bar.dart
lib/widgets/: comment.dart  read_more.dart  (+3 more)
test/: widget_test.dart
widgetbook/: widgetbook.dart
(+61 files in other folders)
