[tool.poetry]
name = "scraping"
version = "0.1.0"
description = ""
authors = ["oskilla68 <oscar.fan1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
